2005-06-07  Zack Weinberg  <zack@codesourcery.com>

	* doc/porting.texi: Change all mention of md_apply_fix3 and
	gas_cgen_md_apply_fix3 to md_apply_fix and gas_cgen_md_apply_fix
	respectively.

2005-05-18  Dave Brolley  <brolley@redhat.com>

	* utils-sim.scm (-gen-decode-default-entry): New function.
	(-gen-decode-insn-entry): Now takes 'invalid-insn' argument. Generate
	code to check that all opcodes bits match.
	(-gen-decoder-switch): Use -gen-decode-default-entry.

2005-05-16  Jim Blandy  <jimb@redhat.com>

	* sid.scm (gen-ifetch): Require BITSIZE to be exactly the size
	fetched by one of our GETIMEM* methods.
	* utils-gen.scm (-extract-chunk-specs): Always fetch full
	base-insn-sized chunks.

2005-05-10  Nick Clifton  <nickc@redhat.com>

	* Update the address and phone number of the FSF organization in
	the GPL notices in the following files:
	COPYING.CGEN, utils.scm, cpu/iq2000m.cpu, cpu/openrisc.cpu,
	cpu/powerpc.cpu, slib/random.scm

2005-05-06  Jim Blandy  <jimb@redhat.com>

	* pprint.scm, cos-pprint.scm: Add documentation.

	* pprint.scm (pprint): Don't wipe out elide-table after each call.

	* pprint.scm, cos-pprint.scm: New files.

2005-04-04  Nick Clifton  <nickc@redhat.com>

	* opcodes.scm (-gen-parse-address): Initialise value to zero to
	avoid a compile time warning.

2005-03-18  Nick Clifton  <nickc@redhat.com>

	* cpu/ip2k.opc (parse_lit8): Change wording of error message to
	"percent-operand" from "%operand" as the latter confuses xgettext
	into thinking that it is a C printf formating directive, which
	prevents proper translation.

2005-02-23  Nick Clifton  <nickc@redhat.com>

	* opcodes.scm (gen-parse-number): Add a cast to the desired
	pointer signed'ness in order to prevent compile time warnings.
	* cpu/ip2k.opc: Fixed compile time warnings about differing
	signed'ness of pointers passed to functions.
	* cpu/iq2000.opc: Likewise.
	* cpu/m32r.opc: Likewise.
	* cpu/openrisc.opc: Likewise.
	* cpu/xstormy16.opc: Likewise.
